# Rust-Galaxy-Simulation

./: Cargo.toml
src/: main.rs
