[package]
name = "rust-galaxy-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
rand = "0.8"
rayon = "1.9"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3